--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -10,6 +10,7 @@
 	padding: 0;
 	margin: 0;
 	list-style-type: none;
+	vertical-align: top;
 }
 
 .site-footer__list-header {
